--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 		font-weight:700
 	}
 
+
 	header.masthead{
 		position:relative;
 		background-color:#083D44;
@@ -15,7 +16,7 @@
 		-moz-background-size:cover;
 		-o-background-size:cover;
 		background-size:cover;
-		padding-top:16rem;
+		padding-top:5rem;
 		padding-bottom:21.1rem;
 	}
 
@@ -42,6 +43,10 @@
 
 	}
 
+	.bvn{
+		padding-top: 11rem;
+	}
+
 
 
 	.navbar {
@@ -60,6 +65,8 @@
 	.btn{
 		background: #1CB91C;
 		color: #fff;
+		width: 180px;
+
 	}
 
 	.btn:hover{
@@ -79,19 +86,48 @@
 	.rechercher{
 		width: 70%;
 		margin:auto;
+		margin-top: 122px;
 	}
 	.montrer {
-		border: solid 2px red;
+		border: solid 5px rgba(255, 255, 255, 0.5);
 		text-align: center;
 		padding: 10px;
 		margin-bottom: 10px;
+		border-radius: 20px;
+		background-color: #23393C;
+
 	}
 	.cacher{
 		display: none;
-		border: outset 2px blue;
 		margin-top: 10px;
 	}
 
 	.new-search{
-		margin-top:300px;
+		margin-top: 100px;
 	}
+
+	.img{
+		max-width: 250px;
+	}
+
+	.form-offers{
+		margin-left: 100px;
+		margin-right: 100px;
+	}
+
+	.toggleMore{
+		background: #1CB91C;
+		color: #fff;
+		border-radius: 8px;
+		border-style: none;
+		width: auto;
+	}
+
+	.toggleMore:hover{
+		background-color: #fff;
+		color: #1CB91C ;
+	}
+
+.photo-annonce{
+	width: 150px;
+}
