--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 	body{
 		font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif
-		}
+	}
 
 	h1,h2,h3,h4,h5,h6{
 		font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
@@ -9,52 +9,44 @@
 	}
 
 
-	header.masthead{
+
+	body.masthead{
 		position:relative;
 		background-color:#083D44;
 		-webkit-background-size:cover;
 		-moz-background-size:cover;
 		-o-background-size:cover;
 		background-size:cover;
-		padding-top:5rem;
-		padding-bottom:21.1rem;
+		padding-top:5.5rem;
+		padding-bottom:0rem;
 	}
 
-	header.masthead .overlay{
-		position:absolute;
-		background-color:#212529;
-		height:100%;
-		width:100%;
-		top:0;
-		left:0;
-		opacity:.3
-	}
 
-	header.masthead h1{
+
+	body.masthead h1{
 		font-size:2rem
 	}
 
 	#logo{
-		width: 19%;
-		height: 10%;
-		margin: auto;
-		padding: auto;
-		margin-top: 8px;
+		width: 60%;
+		float: left;
+		margin: 0;
+		padding: 0;
+		margin-top: 5%;
 
 	}
 
 	.bvn{
-		padding-top: 11rem;
+		padding-top: 3rem;
 	}
 
 
 
 	.navbar {
-		height: 10%;
-		width: 10%
 		margin: auto;
+
 		padding: auto;
-		background-color: rgba(255, 255, 255, 0.9);
+		background-color: rgb(255, 255, 255);
 
 	}
 
@@ -108,6 +100,8 @@
 
 	.img{
 		max-width: 250px;
+		max-height: 250px;
+
 	}
 
 	.form-offers{
@@ -129,94 +123,119 @@
 	}
 
 
-
-.photo-annonce {
+	.masthead{
+		position:relative;
+		background-color:#083D44;
+		-webkit-background-size:cover;
+		-moz-background-size:cover;
+		-o-background-size:cover;
+		background-size:cover;
+		padding-top:5rem;
+		padding-bottom:21.1rem;
+	}
+	.photo-annonce {
 		width: 200px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-}
+		border-radius: 5px;
+		cursor: pointer;
+		transition: 0.3s;
+	}
 
-.photo-annonce:hover {opacity: 0.7;}
+	.photo-annonce:hover {opacity: 0.7;}
 
-.geo{
-	width: 49%;
-	display: inline-block;
-	margin: 1rem 0;
-}
+	.geo{
+		width: 49%;
+		display: inline-block;
+		margin: 1rem 0;
+	}
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100% /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
+	/* The Modal (background) */
+	.modal {
+		display: none; /* Hidden by default */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Sit on top */
+		padding-top: 100px; /* Location of the box */
+		left: 0;
+		top: 0;
+		width: 100%; /* Full width */
+		height: 100%; /* Full height */
+		overflow: auto; /* Enable scroll if needed */
+		background-color: rgb(0,0,0); /* Fallback color */
+		background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+	}
 
-/* Modal Content (Image) */
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 600px;
+	/* Modal Content (Image) */
+	.modal-content {
+		margin: auto;
+		display: block;
+		width: 80%;
+		max-width: 600px;
 
-}
+	}
 
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
-}
+	/* Caption of Modal Image (Image Text) - Same Width as the Image */
+	#caption {
+		margin: auto;
+		display: block;
+		width: 80%;
+		max-width: 700px;
+		text-align: center;
+		color: #ccc;
+		padding: 10px 0;
+		height: 150px;
+	}
 
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
+	/* Add Animation - Zoom in the Modal */
+	.modal-content, #caption {
+		animation-name: zoom;
+		animation-duration: 0.6s;
+	}
 
-@keyframes zoom {
-    from {transform:scale(0)}
-    to {transform:scale(1)}
-}
+	@keyframes zoom {
+		from {transform:scale(0)}
+		to {transform:scale(1)}
+	}
 
-/* The Close Button */
-.close {
-    position: absolute;
-    top: 100px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
+	/* The Close Button */
+	.close {
+		position: absolute;
+		top: 100px;
+		right: 35px;
+		color: #f1f1f1;
+		font-size: 40px;
+		font-weight: bold;
+		transition: 0.3s;
+	}
 
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
-#map {
-	margin-top:100px;
-	height: 500px;
-}
+	.close:hover,
+	.close:focus {
+		color: #bbb;
+		text-decoration: none;
+		cursor: pointer;
+	}
+	#map {
 
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-    .modal-content {
-        width: 100%;
-    }
+		height: 500px;
+		width: 100%;
+	}
+
+	/* 100% Image Width on Smaller Screens */
+	@media only screen and (max-width: 700px){
+		.modal-content {
+			width: 100%;
+		}
+	}
+	a.logolink{
+		display: inline-block;
+		line-height: 1em;
+		overflow: hidden;
+		width: 180px;
+	}
+
+.vertical-center {
+	border: solid 20px rgba(255, 255, 255, 0.5);
+	border-radius: 15px;
+  	min-height: 78%;  /* Fallback for browsers do NOT support vh unit */
+  	min-height: 78vh; /* These two lines are counted as one :-)       */
+
+
 }
