--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@
 	.rechercher{
 		width: 70%;
 		margin:auto;
-		margin-top: 122px;
+		margin-top: 50px;
 	}
 	.montrer {
 		border: solid 5px rgba(255, 255, 255, 0.5);
@@ -107,6 +107,7 @@
 	.form-offers{
 		margin-left: 100px;
 		margin-right: 100px;
+		text-align: left;
 	}
 
 	.toggleMore{
@@ -213,7 +214,7 @@
 		cursor: pointer;
 	}
 	#map {
-
+		color: black;
 		height: 500px;
 		width: 100%;
 	}
@@ -239,3 +240,15 @@
 
 
 }
+
+#ville{
+	width: 30%;
+	margin-top: 3%;
+	margin-bottom: 3%;
+	margin-left: 35%;
+}
+.icon{
+	width: 30px;
+	height: 30px;
+}
+
